Fix promo overlap for mobile auth view covers
This also tries not to re-introduce the hop from ae67a0a. That commit for that fix is what broke this.

[Fixes: #117653481]

--- a/src/containers/authentication/Authentication.sass
+++ b/src/containers/authentication/Authentication.sass
@@ -45,8 +45,10 @@
   color: #fff
 
 @media(max-width: #{$break-2-max})
-  .Authentication
-    min-height: 100%
+  .Authentication .Cover
+    min-width: 100vw
+    min-height: 100vh
+
 
 @media(min-width: #{em(350)})
   .AuthenticationFormDialog
